tests/baselines/reference/switchCaseWithUnionTypes01.errors.txt
switchCaseWithUnionTypes01.ts(22,10): error TS2678: Type 'boolean' is not comparable to type 'string | number'.


==== switchCaseWithUnionTypes01.ts (1 errors) ====
    var strOrNum: string | number;
    var numOrBool: number | boolean;
    var str: string;
    var num: number;
    var bool: boolean;
    
    switch (strOrNum) {
        // Identical
        case strOrNum:
            break;
    
        // Constituents
        case str:
        case num:
            break;
    
        // Overlap in constituents
        case numOrBool:
            break;
    
        // No relation
        case bool:
             ~~~~
!!! error TS2678: Type 'boolean' is not comparable to type 'string | number'.
            break;
    }